--- a/web/html/slwh.html
+++ b/web/html/slwh.html
@@ -67,10 +67,10 @@
                                     </optgroup>
                                 </select>
                             </div>
-                            <label class="control-label col-sm-1" for="txt_search_month">年月</label>
+                            <label class="control-label col-sm-1" for="txt_search_month">年</label>
 
                             <div class="col-sm-3">
-                                <input type="month" class="form-control" id="txt_search_month">
+                                <input type="text" class="form-control" id="txt_search_month">
                             </div>
                             <div class="col-sm-4" style="text-align:left;">
                                 <button type="button" style="margin-left:50px" id="btn_query" class="btn btn-primary">查询
@@ -105,7 +105,7 @@
         //初始化Table
         oTableInit.Init = function () {
             $('#tb_content').bootstrapTable({
-                url: 'json/table.json', //请求后台的URL（*）
+                url: 'wfdefController/query.mvc', //请求后台的URL（*）
                 method: 'get', //请求方式（*）
                 toolbar: '#toolbar', //工具按钮用哪个容器
                 striped: true, //是否显示行间隔色
@@ -136,6 +136,26 @@
                     console.log(row);
                     console.log(oldValue);
                     console.log($el);
+                    let dataType = "string";
+                    if(field !== "fgps" && field !== "year"){
+                        dataType = "float"
+                    }
+                    $.ajax({
+                        url: "wfdefController/updateByField.mvc",
+                        async: true,
+                        type: "get",
+                        contentType: "text/html; charset=utf-8",
+                        dataType: 'json',
+                        data : {
+                            id:row.id,
+                            field:field,
+                            value:row[field],
+                            dataType :dataType
+                        }
+                    }).success(function(data){
+                        console.log(data)
+                        swal("保存成功");
+                    });
                 },
                 columns: [
                     {
@@ -143,6 +163,14 @@
                     },
                     {
                         field: 'id',
+                        visible:false
+                    },
+                    {
+                        field: 'kind',
+                        visible:false
+                    },
+                    {
+                        field: 'fgps',
                         title: '名称',
                         editable:{
                             type: 'select',
@@ -172,15 +200,16 @@
                         }
                     },
                     {
-                        field: 'date',
-                        title: '年月',
+                        field: 'year',
+                        title: '年',
                         editable:{
-                            type: 'month',
-                            title: '年月'
+                            type: 'text',
+                            title: '时间（年）',
+                            emptytext: "年",
                         }
                     },
                     {
-                        field: 'one',
+                        field: 'jan',
                         title: '一月',
                         editable:{
                             type: 'number',
@@ -189,7 +218,7 @@
                         }
                     },
                     {
-                        field: 'two',
+                        field: 'feb',
                         title: '二月',
                         editable:{
                             type: 'number',
@@ -198,7 +227,7 @@
                         }
                     },
                     {
-                        field: 'three',
+                        field: 'mar',
                         title: '三月',
                         editable:{
                             type: 'number',
@@ -207,7 +236,7 @@
                         }
                     },
                     {
-                        field: 'four',
+                        field: 'apr',
                         title: '四月',
                         editable:{
                             type: 'number',
@@ -216,7 +245,7 @@
                         }
                     },
                     {
-                        field: 'five',
+                        field: 'may',
                         title: '五月',
                         editable:{
                             type: 'number',
@@ -225,7 +254,7 @@
                         }
                     },
                     {
-                        field: 'six',
+                        field: 'june',
                         title: '六月',
                         editable:{
                             type: 'number',
@@ -234,7 +263,7 @@
                         }
                     },
                     {
-                        field: 'seven',
+                        field: 'july',
                         title: '七月',
                         editable:{
                             type: 'number',
@@ -243,7 +272,7 @@
                         }
                     },
                     {
-                        field: 'eight',
+                        field: 'aug',
                         title: '八月',
                         editable:{
                             type: 'number',
@@ -252,7 +281,7 @@
                         }
                     },
                     {
-                        field: 'nine',
+                        field: 'sept',
                         title: '九月',
                         editable:{
                             type: 'number',
@@ -261,7 +290,7 @@
                         }
                     },
                     {
-                        field: 'ten',
+                        field: 'oct',
                         title: '十月',
                         editable:{
                             type: 'number',
@@ -270,7 +299,7 @@
                         }
                     },
                     {
-                        field: 'eleven',
+                        field: 'nov',
                         title: '十一月',
                         editable:{
                             type: 'number',
@@ -279,7 +308,7 @@
                         }
                     },
                     {
-                        field: 'twelve',
+                        field: 'dec',
                         title: '十二月',
                         editable:{
                             type: 'number',
@@ -289,7 +318,8 @@
                     },
                     {
                         field: 'user',
-                        title: '录入修改人'
+                        title: '录入修改人',
+                        undefinedText : "admin"
                     }
                 ]
             });
@@ -301,12 +331,13 @@
 
         //得到查询的参数
         oTableInit.queryParams = function (params) {
+            console.log("params",params);
             let temp = { //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
                 limit: params.limit, //页面大小
-                offset: params.offset, //页码
-                sltjKind:vue.sltjKind,
-                id: $("#txt_search_name").val(),
-                date: $("#txt_search_month").val()
+                page: params.offset, //页码
+                kind:vue.sltjKind,
+                fgps: $("#txt_search_name").val(),
+                year: $("#txt_search_month").val()
             };
             return temp;
         };
@@ -320,21 +351,40 @@
         oInit.Init = function () {
             //初始化页面上面的按钮事件
             $('#btn_add').on("click", function () {
-                $('#tb_content').bootstrapTable('prepend',{
-                    "user":"admin",
-                    "date":"选择年月",
-                    "one":"数值",
-                    "two":"数值",
-                    "three":"数值",
-                    "four":"数值",
-                    "five":"数值",
-                    "six":"数值",
-                    "seven":"数值",
-                    "eight":"数值",
-                    "nine":"数值",
-                    "ten":"数值",
-                    "eleven":"数值",
-                    "twelve":"数值"
+                if(!vue.sltjKind){
+                    swal("请先在左侧导航树中选择一种类型");
+                    return;
+                }
+                $.ajax({
+                    url: "wfdefController/save.mvc",
+                    async: true,
+                    type: "post",
+                    contentType: "application/json; charset=utf-8",
+                    dataType: 'json',
+                    data : JSON.stringify({
+                        kind:vue.sltjKind
+                    })
+                }).success(function(data){
+                    console.log(data)
+                    swal("开始新增数据");
+                    debugger;
+                    $('#tb_content').bootstrapTable('prepend',{
+                        "id":data.id,
+                        "user":"admin",
+                        "year":"",
+                        "jan":"",
+                        "feb":"",
+                        "mar":"",
+                        "apr":"",
+                        "may":"",
+                        "june":"",
+                        "july":"",
+                        "aug":"",
+                        "sept":"",
+                        "oct":"",
+                        "nov":"",
+                        "dec":""
+                    });
                 });
             });
             $('#btn_delete').on("click", function () {
@@ -366,9 +416,12 @@
                     p.then(function (data) {
                         let typeData = data[node.id];
                         vue.sltjKind = node.id;
+                        vue.name = "";
                         vue.$nextTick(function () {
                             $('.selectpicker').selectpicker('refresh');
-                        })
+                        });
+                        //根据选择的树节点进行查询
+                        $('#tb_content').bootstrapTable('refresh',{silent: true});
                     });
                 });
             })
@@ -413,7 +466,16 @@
                     function () {
                         console.log(selectRows[0]);
                         $('#tb_content').bootstrapTable('removeByUniqueId', selectRows[0].id);
-                        swal("删除成功", "", "success");
+                        $.ajax({
+                            url: "wfdefController/delete.mvc",
+                            async: true,
+                            type: "post",
+                            contentType: "application/json; charset=utf-8",
+                            dataType: 'json',
+                            data : JSON.stringify(selectRows[0])
+                        }).success(function(data){
+                            swal("删除成功", "", "success");
+                        })
                     }
             );
         }else{
