--- a/web/html/zlIndex.html
+++ b/web/html/zlIndex.html
@@ -209,9 +209,8 @@
                                     type: "get",
                                     contentType: "application/json; charset=utf-8",
                                     dataType: 'json',
-                                    data: {
-                                        "abc":123.23,
-                                        "acd":3.3,
+                                    data : {
+                                        directId:data.instructCode
                                     }
                                 }).complete(function(){
                                     swal("急停成功====等待接入系统", "", "success");
@@ -239,7 +238,7 @@
                                 contentType: "text/html; charset=utf-8",
                                 dataType: 'jsonp',
                                 data : {
-                                    fgps:data.instructCode
+                                    directId:data.instructCode
                                 }
                             });
                         });
@@ -295,21 +294,30 @@
         });
 		//定时刷新时间获取可执行指令
         setInterval(function () {
-            let json = {};
+            let arr = [];
         	itemsData.forEach(function(item, index){
                 if(item.staTime > new Date().getTime() && item.staTime - new Date().getTime()<=60000){
                     swal("该指令可以发给闸控系统去执行了");
-                    json[item.instructCode] = item.conValue
+                    arr.push(item.instructCode);
                 }
             });
-            if(!$.isEmptyObject(json)){
+            if(!$.isEmptyObject(arr)){
                 $.ajax({
                     url: "mosaicController/sendDriect.mvc",
                     async: true,
                     type: "get",
                     contentType: "application/json; charset=utf-8",
                     dataType: 'json',
-                    data : json
+                    data : {
+                        param:arr.join(",")
+                    }
+                }).complete(function () {
+                    debugger;
+                    app.items.forEach(function(item, index){
+                        if($.inArray(item.instructCode, arr)!==-1){
+                            item.state =  1;
+                        }
+                    });
                 });
             }
         },1000*60);
