--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
 </head>
 <body style="overflow-y: hidden">
 <div class="container-fluid">
-    <div class="text-center bg-success" style="height: 110px">
+    <div class="text-center bg-success" style="height: 110px;">
         指令工作台
     </div>
     <div class="row">
