--- a/web/index.html
+++ b/web/index.html
@@ -33,12 +33,15 @@
         .paddingRightNull{
             padding-right: 0px;
         }
+        .background{
+            background: url("img/title.png") no-repeat;
+            background-color: #3379B5;
+        }
     </style>
 </head>
 <body style="overflow-y: hidden">
 <div class="container-fluid">
-    <div class="text-center bg-success" style="height: 110px;">
-        指令工作台
+    <div class="text-center bg-success background" style="height: 110px">
     </div>
     <div class="row">
         <div class="col-sm-1 hidden-xs" style="padding-right: 0px;">
